# advanced-algorithmic

tp1/: .gitignore  Makefile.am  README.md  bheap.c  bheap.h  common.c  configure.ac  exercise-addendum.c  exercise1.c  exercise2.c  exercise3.c
tp1/tests/: test1-output.txt  test2-output.txt
tp3/: .gitignore  Makefile.am  configure.ac  main.c  matrix.c  matrix.h  ubqp.c  ubqp.h  vector.c  vector.h
